--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "token": "Bot Token",
     "api_key": "deprem.cc aldımız api key",
-    "yetkili_rol_id": "Rolıd", 
+    "yetkili_rol_id": "Rolıd /durum Komudunu kulanıcak ıd", 
       "trigger_server_id": "/ban Komudunun Kulanılacağı Sunucu ıd  örn (gölgecode)", 
     "target_server_id": "+banlanılan sunucu ıd(gölgecode altyapı)"
 
